--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     </style>
 </head>
 <body>
-    <h1>Tarık'ın Bağlantıları</h1>
+    <h1>uefy</h1>
     <div class="links">
-        <a href="https://instagram.com/hesabin" target="_blank">Instagram</a>
-        <a href="https://youtube.com/hesabin" target="_blank">YouTube</a>
-        <a href="https://discord.gg/davetlinki" target="_blank">Discord</a>
+        <a href="https://instagram.com/uefyy" target="_blank">Instagram</a>
+        <a href="https://youtube.com/uefyy" target="_blank">YouTube</a>
+        <a href="https://discord.gg/teazstore" target="_blank">Discord</a>
     </div>
 </body>
 </html>
