--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <body>
     <h1>uefy</h1>
     <div class="links">
+        <a href="https://steamcommunity.com/id/uefy" target="_blank">Steam</a>        
         <a href="https://instagram.com/uefyy" target="_blank">Instagram</a>
         <a href="https://youtube.com/uefyy" target="_blank">YouTube</a>
         <a href="https://discord.gg/teazstore" target="_blank">Discord</a>
