--- a/index.html
+++ b/index.html
@@ -5,43 +5,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarık</title>
     <style>
-        body { 
-            font-family: 'Arial', sans-serif; 
-            background-color: #111; 
-            color: #fff; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            height: 100vh; 
+        body, html {
             margin: 0;
-            flex-direction: column;
+            padding: 0;
+            height: 100%;
+            font-family: 'Arial', sans-serif;
         }
-        h1 { 
-            font-size: 2.5em; 
-            margin-bottom: 20px; 
+
+        /* Fotoğraf arka planı */
+        .background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('https://drive.google.com/file/d/1WEo4tGauAzzA6wjPPrr0K8eSFyAppHuS/view?usp=sharing'); /* Fotoğrafın linkini buraya ekle */
+            background-size: cover;
+            background-position: center;
+            z-index: -1;
         }
+
+        /* İçeriği kapsayan karartma (overlay) */
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Yarı saydam siyah */
+            z-index: 0;
+        }
+
+        /* Sayfa merkezi içerik */
+        .content {
+            position: relative;
+            z-index: 1;
+            text-align: center;
+            color: white;
+            padding: 20px;
+            width: 80%;
+            max-width: 500px;
+            border-radius: 10px;
+            background: rgba(0, 0, 0, 0.6); /* Yarı saydam arka plan */
+        }
+
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        /* Linklerin düzeni */
         .links a {
-            display: block; 
-            background-color: #333; 
-            color: white; 
-            text-decoration: none; 
-            padding: 15px; 
-            margin: 10px 0; 
-            border-radius: 5px; 
+            display: block;
+            background-color: #333;
+            color: white;
+            text-decoration: none;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 5px;
             transition: background-color 0.3s;
         }
-        .links a:hover { 
-            background-color: #444; 
+
+        .links a:hover {
+            background-color: #444;
+        }
+
+        /* Mobil uyumluluk */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2em;
+            }
+            .content {
+                width: 90%;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>uefy</h1>
-    <div class="links">
-        <a href="https://steamcommunity.com/id/uefy" target="_blank">Steam</a>        
-        <a href="https://instagram.com/uefyy" target="_blank">Instagram</a>
-        <a href="https://youtube.com/uefyy" target="_blank">YouTube</a>
-        <a href="https://discord.gg/teazstore" target="_blank">Discord</a>
+
+    <!-- Fotoğraf arka planı -->
+    <div class="background-image"></div>
+
+    <!-- Karartma efekti -->
+    <div class="overlay"></div>
+
+    <!-- İçerik kutusu -->
+    <div class="content">
+        <h1>uefy</h1>
+        <div class="links">
+            <a href="https://steamcommunity.com/id/uefy" target="_blank">Steam</a>
+            <a href="https://instagram.com/uefyy" target="_blank">Instagram</a>
+            <a href="https://youtube.com/uefyy" target="_blank">YouTube</a>
+            <a href="https://discord.gg/teazstore" target="_blank">Discord</a>
+        </div>
     </div>
+
 </body>
 </html>
