--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://drive.google.com/file/d/1WEo4tGauAzzA6wjPPrr0K8eSFyAppHuS/view?usp=sharing'); /* Fotoğrafın linkini buraya ekle */
+            background-image: url('https://imgur.com/a/hBPAmNB'); /* Fotoğrafın linkini buraya ekle */
             background-size: cover;
             background-position: center;
             z-index: -1;
