--- a/index.html
+++ b/index.html
@@ -12,45 +12,38 @@
             font-family: 'Arial', sans-serif;
         }
 
-        /* Fotoğraf arka planı */
+        /* Arka plan fotoğrafı */
         .background-image {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://imgur.com/a/hBPAmNB'); /* Fotoğrafın linkini buraya ekle */
+            background-image: url('https://i.imgur.com/cPXjXTe.jpeg'); /* Doğru fotoğraf linki */
             background-size: cover;
             background-position: center;
             z-index: -1;
         }
 
-        /* İçeriği kapsayan karartma (overlay) */
-        .overlay {
+        /* Flexbox ile merkezleme */
+        .content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* Yarı saydam siyah */
-            z-index: 0;
-        }
-
-        /* Sayfa merkezi içerik */
-        .content {
-            position: relative;
-            z-index: 1;
+            right: 0;
+            bottom: 0;
             text-align: center;
             color: white;
             padding: 20px;
-            width: 80%;
-            max-width: 500px;
-            border-radius: 10px;
-            background: rgba(0, 0, 0, 0.6); /* Yarı saydam arka plan */
+            z-index: 1;
         }
 
         h1 {
-            font-size: 2.5em;
+            font-size: 3em;
             margin-bottom: 20px;
         }
 
@@ -64,20 +57,11 @@
             margin: 10px 0;
             border-radius: 5px;
             transition: background-color 0.3s;
+            width: 200px; /* Butonların genişliğini sabitle */
         }
 
         .links a:hover {
             background-color: #444;
-        }
-
-        /* Mobil uyumluluk */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2em;
-            }
-            .content {
-                width: 90%;
-            }
         }
     </style>
 </head>
@@ -85,9 +69,6 @@
 
     <!-- Fotoğraf arka planı -->
     <div class="background-image"></div>
-
-    <!-- Karartma efekti -->
-    <div class="overlay"></div>
 
     <!-- İçerik kutusu -->
     <div class="content">
