--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://i.imgur.com/cPXjXTe.jpeg'); /* Doğru fotoğraf linki */
+            background-image: url('https://i.imgur.com/BGSUZGN.jpeg'); /* Doğru fotoğraf linki */
             background-size: cover;
             background-position: center;
             z-index: -1;
