--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             background-color: rgba(0, 0, 0, 0.6);
             color: white;
             text-decoration: none;
-            padding: 15px 25px;
-            margin: 10px 0;
+            padding: 12px 20px; /* Butonların içindeki boşluğu daraltıyoruz */
+            margin: 8px 0; /* Butonlar arasındaki mesafeyi kısaltıyoruz */
             border-radius: 10px;
             transition: all 0.3s ease;
-            width: 250px;
-            font-size: 1.2em;
+            width: 220px; /* Butonların genişliğini biraz daha küçültüyoruz */
+            font-size: 1.1em; /* Yazı boyutunu biraz küçültüyoruz */
         }
 
         .links a:hover {
@@ -75,8 +75,8 @@
         }
 
         .links a i {
-            font-size: 25px; /* Logoların boyutunu ayarlıyoruz */
-            margin-right: 15px; /* Logo ile yazı arasına boşluk ekliyoruz */
+            font-size: 24px; /* Logoların boyutunu biraz küçültüyoruz */
+            margin-right: 12px; /* Logo ile yazı arasındaki boşluğu daraltıyoruz */
             color: white; /* Siyah-beyaz logo efektini sağlıyoruz */
         }
 
