--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             margin: 8px 0; /* Butonlar arasındaki mesafeyi kısaltıyoruz */
             border-radius: 10px;
             transition: all 0.3s ease;
-            width: 220px; /* Butonların genişliğini biraz daha küçültüyoruz */
+            width: 180px; /* Butonların genişliğini daha da küçültüyoruz */
             font-size: 1.1em; /* Yazı boyutunu biraz küçültüyoruz */
         }
 
