--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.7) 45%, rgba(0, 0, 0, 1) 100%), url('https://i.imgur.com/BGSUZGN.jpeg');
+            background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.7) 100%), url('https://i.imgur.com/BGSUZGN.jpeg');
             background-size: cover;
             background-position: center;
             z-index: -1;
@@ -53,22 +53,22 @@
         .links {
             display: flex;  /* Butonları yatayda sıralamak için flexbox */
             justify-content: center;
-            gap: 20px; /* Butonlar arasına boşluk ekler */
+            gap: 15px; /* Butonlar arasına daha az boşluk ekleyelim */
         }
 
         .links a {
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: rgba(0, 0, 0, 0.6); /* Buton arka planını biraz daha şeffaf yapalım */
             color: white;
             text-decoration: none;
-            padding: 15px;
+            padding: 12px;  /* Gri alanın boyutunu küçültüyoruz */
             border-radius: 50%; /* Yuvarlak butonlar */
             transition: all 0.3s ease;
-            width: 80px; /* Butonların genişliğini ayarlıyoruz */
-            height: 80px; /* Butonların yüksekliğini ayarlıyoruz */
-            font-size: 2.5em; /* Logoları büyütüyoruz */
+            width: 70px; /* Butonların genişliğini ayarlıyoruz */
+            height: 70px; /* Butonların yüksekliğini ayarlıyoruz */
+            font-size: 2em; /* Logoları büyütüyoruz */
         }
 
         .links a:hover {
