--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Arial', sans-serif;
         }
 
-        /* Arka plan fotoğrafı + hareketli gradient overlay */
+        /* Arka plan fotoğrafı */
         .background-image {
             position: absolute;
             top: 0;
@@ -24,17 +24,6 @@
             background-size: cover;
             background-position: center;
             z-index: -1;
-            animation: gradientAnimation 10s infinite alternate; /* Animasyon ekledik */
-        }
-
-        /* Gradient animasyonu */
-        @keyframes gradientAnimation {
-            0% {
-                background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.7) 100%);
-            }
-            100% {
-                background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.5) 100%);
-            }
         }
 
         /* Flexbox ile merkezleme */
@@ -58,6 +47,7 @@
             font-size: 3em;
             margin-bottom: 20px;
             font-weight: bold;
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7); /* Gölge efekti eklendi */
         }
 
         /* Linklerin düzeni */
@@ -74,7 +64,7 @@
             background-color: rgba(0, 0, 0, 0.6); /* Arka plan şeffaf */
             color: white;
             text-decoration: none;
-            padding: 8px;  /* Gri alan küçültüldü */
+            padding: 5px;  /* Gri alanı küçülttük */
             border-radius: 50%; /* Yuvarlak butonlar */
             transition: all 0.3s ease;
             width: 70px; /* Butonların genişliği */
