--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             background-image: url('https://i.imgur.com/BGSUZGN.jpeg');
             background-size: cover;
             background-position: center;
+            filter: brightness(50%); /* Arka planı karartıyoruz */
             z-index: -1;
         }
 
@@ -61,15 +62,15 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(0, 0, 0, 0.6); /* Arka plan şeffaf */
+            background-color: rgba(0, 0, 0, 0.9); /* Arka plan siyah yapıldı */
             color: white;
             text-decoration: none;
-            padding: 5px;  /* Gri alanı küçülttük */
+            padding: 3px;  /* Gri alanı küçülttük */
             border-radius: 50%; /* Yuvarlak butonlar */
             transition: all 0.3s ease;
-            width: 70px; /* Butonların genişliği */
-            height: 70px; /* Butonların yüksekliği */
-            font-size: 2em; /* Logoların büyüklüğü */
+            width: 50px; /* Butonların genişliği küçültüldü */
+            height: 50px; /* Butonların yüksekliği küçültüldü */
+            font-size: 1.5em; /* Logoların boyutu küçültüldü */
         }
 
         .links a:hover {
