--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
             z-index: -1;
         }
 
+        /* Sayfa kararması için overlay ekleyelim */
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.4); /* Sayfa genel kararma efekti */
+            z-index: -2;
+            transition: opacity 0.3s ease;
+        }
+
         /* Flexbox ile merkezleme */
         .content {
             display: flex;
@@ -91,12 +103,20 @@
             color: white;
         }
 
+        /* Sayfa kararmasını aktif hale getirelim */
+        .links a:hover ~ .overlay {
+            opacity: 0.7; /* Sayfa daha kararmış gibi görünsün */
+        }
+
     </style>
 </head>
 <body>
 
     <!-- Fotoğraf arka planı -->
     <div class="background-image"></div>
+
+    <!-- Sayfa kararma efekti -->
+    <div class="overlay"></div>
 
     <!-- İçerik kutusu -->
     <div class="content">
