--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <i class="fab fa-instagram"></i>
             </a>
             <!-- YouTube Butonu -->
-            <a href="https://youtube.com/uefyy" target="_blank">
+            <a href="https://youtube.com/@uefyy" target="_blank">
                 <i class="fab fa-youtube"></i>
             </a>
             <!-- Discord Butonu -->
