--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 30px; /* Butonlar arasına boşluk ekledik */
+            gap: 20px; /* Logolar arasındaki boşluğu küçültüyoruz */
             opacity: 1;
             transition: opacity 0.3s ease;
         }
@@ -80,12 +80,12 @@
             background-color: rgba(0, 0, 0, 0.9); /* Arka plan siyah yapıldı */
             color: white;
             text-decoration: none;
-            padding: 3px;  /* Gri alanı küçülttük */
+            padding: 5px;  /* Gri alanı küçültüyoruz */
             border-radius: 50%; /* Yuvarlak butonlar */
             transition: all 0.3s ease;
-            width: 50px; /* Butonların genişliği küçültüldü */
-            height: 50px; /* Butonların yüksekliği küçültüldü */
-            font-size: 1.5em; /* Logoların boyutu küçültüldü */
+            width: 70px; /* Logoların genişliğini artırdık */
+            height: 70px; /* Logoların yüksekliğini artırdık */
+            font-size: 2.2em; /* Logoların boyutunu büyüttük */
             opacity: 1;
         }
 
@@ -97,10 +97,6 @@
 
         .links a:not(:hover) {
             opacity: 0.6; /* Diğer logoların opaklığı azalsın */
-        }
-
-        .links a i {
-            color: white;
         }
 
         /* Sayfa kararmasını aktif hale getirelim */
