--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <i class="fab fa-steam"></i>
             </a>
             <!-- Instagram Butonu -->
-            <a href="https://instagram.com/uefyy" target="_blank">
+            <a href="https://instagram.com/uefyyy" target="_blank">
                 <i class="fab fa-instagram"></i>
             </a>
             <!-- YouTube Butonu -->
