--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             background-image: url('https://i.imgur.com/BGSUZGN.jpeg');
             background-size: cover;
             background-position: center;
-            filter: brightness(50%); /* Arka planı karartıyoruz */
+            filter: brightness(50%);
             z-index: -1;
         }
 
@@ -34,7 +34,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.4); /* Sayfa genel kararma efekti */
+            background-color: rgba(0, 0, 0, 0.4);
             z-index: -2;
             transition: opacity 0.3s ease;
         }
@@ -60,7 +60,7 @@
             font-size: 3em;
             margin-bottom: 20px;
             font-weight: bold;
-            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7); /* Gölge efekti */
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
         }
 
         /* Linklerin düzeni */
@@ -68,7 +68,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 20px; /* Logolar arasındaki boşluğu küçültüyoruz */
+            gap: 20px;
             opacity: 1;
             transition: opacity 0.3s ease;
         }
@@ -77,31 +77,64 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(0, 0, 0, 0.9); /* Arka plan siyah yapıldı */
+            background-color: rgba(0, 0, 0, 0.9);
             color: white;
             text-decoration: none;
-            padding: 5px;  /* Gri alanı küçültüyoruz */
-            border-radius: 50%; /* Yuvarlak butonlar */
+            padding: 5px;
+            border-radius: 50%;
             transition: all 0.3s ease;
-            width: 70px; /* Logoların genişliğini artırdık */
-            height: 70px; /* Logoların yüksekliğini artırdık */
-            font-size: 2.2em; /* Logoların boyutunu büyüttük */
+            width: 70px;
+            height: 70px;
+            font-size: 2.2em;
             opacity: 1;
         }
 
-        /* Hover efekti ile logoların büyümesi ve diğerlerinin opaklığının azalması */
         .links a:hover {
-            transform: scale(1.4); /* Üzerine gelince logo daha da büyüsün */
-            opacity: 1; /* Üzerinde olduğumuz logo tamamen görünür olacak */
+            transform: scale(1.4);
+            opacity: 1;
         }
 
         .links a:not(:hover) {
-            opacity: 0.6; /* Diğer logoların opaklığı azalsın */
+            opacity: 0.6;
         }
 
         /* Sayfa kararmasını aktif hale getirelim */
         .links a:hover ~ .overlay {
-            opacity: 0.7; /* Sayfa daha kararmış gibi görünsün */
+            opacity: 0.7;
+        }
+
+        /* Kayan Yazılar (Yukarıdan Aşağıya) */
+        .scrolling-text-left,
+        .scrolling-text-right {
+            position: absolute;
+            font-size: 1.5em;
+            color: black;
+            white-space: nowrap;
+            animation: scrollTextVertical 10s linear infinite;
+            font-weight: bold;
+            z-index: 2;
+        }
+
+        .scrolling-text-left {
+            top: 0;
+            left: 0;
+            transform: translateX(-100%);
+        }
+
+        .scrolling-text-right {
+            top: 0;
+            right: 0;
+            transform: translateX(100%);
+        }
+
+        /* Animasyon - Yazı Yukarıdan Aşağıya Kayacak */
+        @keyframes scrollTextVertical {
+            0% {
+                top: -100%;
+            }
+            100% {
+                top: 100%;
+            }
         }
 
     </style>
@@ -114,25 +147,28 @@
     <!-- Sayfa kararma efekti -->
     <div class="overlay"></div>
 
+    <!-- Kayan yazılar (Sol ve Sağda) -->
+    <div class="scrolling-text-left">
+        discord.gg/teazstore
+    </div>
+    <div class="scrolling-text-right">
+        discord.gg/teazstore
+    </div>
+
     <!-- İçerik kutusu -->
     <div class="content">
-        <!-- 'uefy' yazısını ekledik -->
         <h1>uefy</h1>
 
         <div class="links">
-            <!-- Steam Butonu -->
             <a href="https://steamcommunity.com/id/uefy" target="_blank">
                 <i class="fab fa-steam"></i>
             </a>
-            <!-- Instagram Butonu -->
-            <a href="https://instagram.com/uefyyy" target="_blank">
+            <a href="https://instagram.com/uefyy" target="_blank">
                 <i class="fab fa-instagram"></i>
             </a>
-            <!-- YouTube Butonu -->
-            <a href="https://youtube.com/@uefyy" target="_blank">
+            <a href="https://youtube.com/uefyy" target="_blank">
                 <i class="fab fa-youtube"></i>
             </a>
-            <!-- Discord Butonu -->
             <a href="https://discord.gg/teazstore" target="_blank">
                 <i class="fab fa-discord"></i>
             </a>
