--- a/index.html
+++ b/index.html
@@ -87,14 +87,15 @@
             height: 50px;
             font-size: 1.8em;
             opacity: 1;
+            transform: scale(1);
         }
 
         .links a:hover {
-            transform: scale(1.4);
+            transform: scale(1.4); /* Büyütme efekti */
             box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5); /* Fare ile üzerine gelince gölge eklendi */
         }
 
-        /* Fare ile logonun üzerine geldiğinde diğer logoların boyutunu küçültme */
+        /* Fare ile logonun üzerine geldiğinde, diğer logoların boyutunu küçültme */
         .links a:hover ~ a {
             transform: scale(0.8);
             opacity: 0.6;
